resaltamos h3 y agregamos un div dentro de card 2

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
               </p>              
             </div>
             <div class="card_2">
-              <h3>Cine</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem saepe voluptatibus amet. Eos nulla quidem expedita, repudiandae dignissimos modi vel, perspiciatis amet assumenda quo quod, voluptates illum nisi? Ullam, vitae!
-              </p> 
+              
+              <div class="cine">
+                <h3>Cine</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem saepe voluptatibus amet. Eos nulla quidem expedita, repudiandae dignissimos modi vel, perspiciatis amet assumenda quo quod, voluptates illum nisi? Ullam, vitae!
+                </p>
+              </div>
+               
             </div>
             <div class="card_3">
               <h3>Sesiones fotográficas</h3>
