agregamos textos rales a las páginas

--- a/pages/acerca_de_mi.html
+++ b/pages/acerca_de_mi.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="en esta página, podras ver una reseña de mi trayectoria en el mundo audiovisual, desde mis comienzos dónde empecé a forjar las bases de esta hermosa profesión, mis capacitaciones y mi curriculum">
+    <meta name="keywords" content="audiovisual, cine, productora, fotografía, digital, contenido, video, drone, grabación, redes">
     <title>Portfolio</title>
     <link rel="shortcut icon" href="../medios/logo_icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -36,11 +38,14 @@
                 <div class="perfil">
                     <img src="../medios/foto_ perfil_acerca_de_mi.jpg" alt="Foto perfil">
                 </div>
-                <div class="perfil">
+                <div class="perfilTexto">
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore quo placeat illo cumque, voluptatibus explicabo itaque, voluptates facilis saepe quisquam dolor ad voluptas recusandae rerum impedit harum doloribus reprehenderit dicta!
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste soluta aliquam voluptatibus architecto, facilis error sequi laudantium ipsam? Fuga corrupti alias earum voluptatibus quis dolor, ex laudantium quae maxime pariatur.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia numquam quibusdam voluptatem eos voluptates error eaque vitae? Amet velit excepturi, quidem quibusdam, quod dolore dolorum esse eum aliquam, architecto dignissimos!
+                    Soy una creadora apasionada de contenido audiovisual, dedicada a dar vida a historias cautivadoras y experiencias visuales memorables. Mi enfoque no solo se centra en la técnica, sino en la capacidad de conectar emocionalmente a través de la narrativa visual.
+                    </p>
+                    <p>Mi viaje en el mundo del contenido audiovisual comenzó con una pasión innata por contar historias. A lo largo de los años, he perfeccionado mis habilidades técnicas y creativas, enfrentando desafíos y aprendiendo de cada proyecto. Desde mis primeros pasos hasta la actualidad, mi compromiso con la evolución y la innovación ha sido el motor de mi crecimiento.
+                    </p>
+                    <p>
+                    Mi servicio va más allá de la creación de contenido; es la materialización de ideas, emociones y mensajes. Ofrezco una herramienta para empresas, marcas o individuos que desean destacar en un mundo digital saturado, proporcionando contenido audiovisual que no solo es visualmente impactante, sino que también comunica de manera efectiva la esencia y la visión de quienes confían en mí. La importancia radica en la capacidad de transformar conceptos en experiencias visuales auténticas y significativas.
                     </p>
                 </div>
                 
