--- a/pages/carrete_audiovisual.html
+++ b/pages/carrete_audiovisual.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="te mostramos algunos de nuestros reels audiovisuales, producciones y todo el contenido digital para medios">
+    <meta name="keywords" content="audiovisual, cine, productora, fotografía, digital, contenido, video, drone, grabación, redes">
     <title>Portfolio</title>
     <link rel="shortcut icon" href="../medios/logo_icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -36,8 +38,12 @@
             <div class="iframe">
                 <iframe width="1120" height="630" src="https://www.youtube.com/embed/Rko0guiRpU8?si=MiAzgdXkrqkVFQwJ&amp;start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita itaque dolores blanditiis, nobis suscipit molestiae! Enim quaerat reiciendis iure deleniti laborum nobis, culpa explicabo voluptatem nemo voluptatibus officia expedita numquam?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa iusto velit neque est sed tempore consequuntur, ipsam optio eius. Rerum cum suscipit nostrum inventore laborum at autem. Iure, nulla sint.
+                La razón principal para utilizar un carrete es proporcionar a clientes potenciales, empleadores o audiencias una visión rápida y efectiva de las habilidades y estilo del profesional en cuestión. Algunas razones clave para utilizar un carrete son:
+                </p>
+                <p>El carrete ofrece una visión rápida de la calidad y diversidad del trabajo realizado por el profesional a lo largo del tiempo.</p>
+                <p>Es una herramienta eficaz para presentaciones en reuniones, entrevistas o al solicitar proyectos, ya que comunica de manera visual y atractiva.</p>
+                <p>
+                Puede actualizarse regularmente para reflejar los proyectos más recientes y mantener la relevancia y frescura.
                 </p>
             </div> 
         </section>
