--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="en nuestra galería de imágenes, podras encontrar contenido de nuestros momentos de acción, creando contenido">
+    <meta name="keywords" content="audiovisual, cine, productora, fotografía, digital, contenido, video, drone, grabación, redes">
     <title>Portfolio</title>   
     <link rel="shortcut icon" href="../medios/logo_icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
