hcimos los links del logo en los html y se corrigio el css del logo

--- a/pages/carrete_audiovisual.html
+++ b/pages/carrete_audiovisual.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="../medios/logotipo.png" alt="productora_audiovisual" class="logo_tipo">
+        <a class="link_logo" href="../index.html"><img src="../medios/logotipo.png" alt="productora_audiovisual" class="logo_tipo"></a>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
