--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="../medios/logotipo.png" alt="productora_audiovisual" class="logo_tipo">
+        <a class="link_logo" href="../index.html"><img src="../medios/logotipo.png" alt="productora_audiovisual" class="logo_tipo"></a>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
