--- a/pages/carrete_audiovisual.html
+++ b/pages/carrete_audiovisual.html
@@ -36,7 +36,7 @@
                 <h2>Reel</h2>
             </section>
             <div class="iframe">
-                <iframe width="1120" height="630" src="https://www.youtube.com/embed/Rko0guiRpU8?si=MiAzgdXkrqkVFQwJ&amp;start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="80%" height="400" src="https://www.youtube.com/embed/Rko0guiRpU8?si=MiAzgdXkrqkVFQwJ&amp;start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <p>
                 La razón principal para utilizar un carrete es proporcionar a clientes potenciales, empleadores o audiencias una visión rápida y efectiva de las habilidades y estilo del profesional en cuestión. Algunas razones clave para utilizar un carrete son:
                 </p>
